--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,16 @@ body {
   transform: scale(1);
 }
 
+.card:hover {
+  transform: scale(1.01);
+  transition: .3s ease all;
+}
+
+.card:active {
+  transform: scale(0.97);
+  transition: transform .3s;
+}
+
 .card-front, .card-back {
   width: 100%;
   height: 100%;
